--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wiki",
-  "version": "2.0.0",
-  "releaseDate": "2019-01-01T01:01:01.000Z",
+  "version": "2.5.299",
+  "releaseDate": "2023-07-06T01:01:01.000Z",
   "description": "A modern, lightweight and powerful wiki app built on NodeJS, Git and Markdown",
   "main": "wiki.js",
   "dev": true,
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Requarks/wiki.git"
+    "url": "git+https://github.com/sugar4dev/wiki.git"
   },
   "keywords": [
     "wiki",
@@ -26,12 +26,6 @@
     "guides",
     "knowledge base"
   ],
-  "author": "Nicolas Giard",
-  "license": "AGPL-3.0",
-  "bugs": {
-    "url": "https://github.com/Requarks/wiki/issues"
-  },
-  "homepage": "https://github.com/Requarks/wiki#readme",
   "engines": {
     "node": ">=10.12"
   },
@@ -384,10 +378,5 @@
       "server/views/setup.pug",
       "server/views/legacy/master.pug"
     ]
-  },
-  "collective": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/wikijs",
-    "logo": "https://opencollective.com/opencollective/logo.txt"
   }
 }
